JS - options par defaut

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                     <label for="tentatives12">12 tentatives</label>
                 </fieldset>
             </form>
-            <input type="button" value="Options par Défaut"> 
+            <button onclick="optionsDefaut();">Options par Défaut</button>
+            <button>Commencer la Partie</button>
         </div>
 	</div>
     <footer>
     </footer>
+    <script src="./assets/js/menu_principal.js"></script>
     <script src="upup.min.js"></script>
     <script>
         UpUp.start({
