--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div id="ecranJeu">
             <div id="tableCases">
             </div>
+            <div id="pions">
+                <span class="pion jaune" onmousedown="choisirPion(event,'jaune');"></span><span class="pion bleu" onmousedown="choisirPion(event, 'bleu');"></span><span class="pion rouge" onmousedown="choisirPion(event, 'rouge');"></span><span class="pion vert" onmousedown="choisirPion(event, 'vert');"></span><span class="pion blanc" onmousedown="choisirPion(event, 'blanc');"></span><span class="pion noir" onmousedown="choisirPion(event, 'noir');"></span>
+            </div>
         </div>
 	</div>
     <footer>
