drag and drog version temporaire

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div id="tableCases">
             </div>
             <div id="pions">
-                <span class="pion jaune" onmousedown="choisirPion(event,'jaune');"></span><span class="pion bleu" onmousedown="choisirPion(event, 'bleu');"></span><span class="pion rouge" onmousedown="choisirPion(event, 'rouge');"></span><span class="pion vert" onmousedown="choisirPion(event, 'vert');"></span><span class="pion blanc" onmousedown="choisirPion(event, 'blanc');"></span><span class="pion noir" onmousedown="choisirPion(event, 'noir');"></span>
+                <span class="pion yellow" onmousedown="choisirPion(event,'yellow');"></span><span class="pion blue" onmousedown="choisirPion(event, 'blue');"></span><span class="pion red" onmousedown="choisirPion(event, 'red');"></span><span class="pion green" onmousedown="choisirPion(event, 'green');"></span><span class="pion white" onmousedown="choisirPion(event, 'white');"></span><span class="pion black" onmousedown="choisirPion(event, 'black');"></span>
             </div>
         </div>
 	</div>
