installation pions en fonction des options

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
+                <div id="rowSecrete">
+                </div>
             </div>
             <div id="pions">
-                <span class="pion yellow" onmousedown="choisirPion(event,'yellow');"></span><span class="pion blue" onmousedown="choisirPion(event, 'blue');"></span><span class="pion red" onmousedown="choisirPion(event, 'red');"></span><span class="pion green" onmousedown="choisirPion(event, 'green');"></span><span class="pion white" onmousedown="choisirPion(event, 'white');"></span><span class="pion black" onmousedown="choisirPion(event, 'black');"></span>
             </div>
         </div>
 	</div>
