comparaison proposition et code secret

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
-                <div id="rowSecrete">
-                </div>
+                <div id="rowSecrete"></div>
             </div>
             <div id="pions">
             </div>
