--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div id="ecranMenuPrincipal">
             <form>
                 <h2>Menu Principal</h2>
-                <fieldset>
+                <!--<fieldset>
                     <legend>Autoriser les Couleurs Identiques: </legend>
-                    <input type="checkbox" name="couleurDif" id="couleurDif">
-                    <label for="couleurDif">Autoriser</label>
-                </fieldset>
+                    <input type="checkbox" name="couleurIdentiques" id="couleurIdentiques">
+                    <label for="couleurIdentiques">Autoriser</label>
+                </fieldset>-->
                 <fieldset>
                     <legend>Nombre de Couleurs Différentes: </legend>
                     <input type="radio" name="couleurNbr" id="couleurNbr6" value="6">
