--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <fieldset>
                     <legend>Nombre de Tentatives: </legend>
                     <input type="radio" name="tentatives" id="tentatives8" value="8">
-                    <label for="tentatives8">8 tentatives</label>
+                    <label for="tentatives8">8 chances</label>
                     <input type="radio" name="tentatives" id="tentatives10" value="10">
-                    <label for="tentatives10">10 tentatives</label>
+                    <label for="tentatives10">10 chances</label>
                     <input type="radio" name="tentatives" id="tentatives12" value="12">
-                    <label for="tentatives12">12 tentatives</label>
+                    <label for="tentatives12">12 chances</label>
                 </fieldset>
             </form>
             <button onclick="optionsDefaut();">Options par Défaut</button>
