--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 	</div>
     <footer>
     </footer>
-    <script src="./assets/js/menu_principal.js"></script>
+    <script src="./assets/js/moteur.js"></script>
     <script src="upup.min.js"></script>
     <script>
         UpUp.start({
           'content-url': 'index.html',
-          'assets': ['assets/css/style.css']
+          'assets': ['assets/css/style.css', 'assets/js/moteur.js']
         });
     </script>
 </body>
