--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </form>
             <button onclick="optionsDefaut();">Options par Défaut</button>
             <button onclick="nouvellePartie();">Commencer la Partie</button>
+            <h3>Les règles:</h3>
+            <p>Trouve la bonne combinaison... Après avoir testé une combinaison, l'ordinateur t'indiquera si tu as une couleur à la bonne place à l'aide d'un cercle rouge. Si tu as une couleur à la mauvaise place, il te l'indiquera avec le cercle vert. Les cases choisies par l'ordinateur pour donner ces renseignements sont aléatoires.</p>
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
