--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
-                <div id="rowSecrete"></div>
-            </div>
-            <div id="pions">
-            </div>
+                <div id="rowSecrete"></div><div id="pions"></div></div>
         </div>
 	</div>
     <footer>
