--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
 	</div>
     <footer>
+        <button id="recommencer" onclick="location.reload()" type="button">Menu Principal</button>
     </footer>
     <script src="./assets/js/moteur.js"></script>
     <script src="upup.min.js"></script>
