empecher les couleurs identiques

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
         <div id="ecranMenuPrincipal">
             <form>
                 <h2>Menu Principal</h2>
-                <!--<fieldset>
-                    <legend>Autoriser les Couleurs Identiques: </legend>
-                    <input type="checkbox" name="couleurIdentiques" id="couleurIdentiques">
-                    <label for="couleurIdentiques">Autoriser</label>
-                </fieldset>-->
                 <fieldset>
                     <legend>Nombre de Couleurs Différentes: </legend>
                     <input type="radio" name="couleurNbr" id="couleurNbr6" value="6">
@@ -52,7 +47,7 @@
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
-                <div id="rowSecrete"></div><div id="pions"></div></div>
+                <div id="rowSecrete"></div><div id="pions"></div><div id="informations">couleurs identiques non autorisées</div></div>
         </div>
 	</div>
     <footer>
