--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button onclick="optionsDefaut();">Options par Défaut</button>
             <button onclick="nouvellePartie();">Commencer la Partie</button>
             <h3>Les règles:</h3>
-            <p>Trouve la bonne combinaison... Le code est composé de 4 couleurs différentes. Après avoir testé une combinaison, l'ordinateur t'indiquera si tu as une couleur à la bonne place à l'aide d'un cercle rouge. Si tu as une couleur à la mauvaise place, il te l'indiquera avec le cercle vert. Les cases choisies par l'ordinateur pour donner ces renseignements ne sont pas indicatives.</p>
+            <p>Trouve la bonne combinaison... Le code est composé de 4 couleurs différentes. Dans la zone carrée se trouvant à droite, après avoir testé une combinaison, l'ordinateur t'indiquera si tu as une couleur à la bonne place à l'aide d'un petit cercle rouge. Si tu as une couleur à la mauvaise place, il te l'indiquera avec le petit cercle vert. L'ordre des cases choisies par l'ordinateur pour donner ces renseignements est aléatoire.</p>
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
