modification symboles bonne et mauvaise place

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </form>
             <button onclick="optionsDefaut();">Options par Défaut</button>
             <button onclick="nouvellePartie();">Commencer la Partie</button>
-            <h3>Les règles:</h3>
-            <p>Trouve la bonne combinaison... Le code est composé de 4 couleurs différentes. Dans la zone carrée se trouvant à droite, après avoir testé une combinaison, l'ordinateur t'indiquera si tu as une couleur à la bonne place à l'aide d'un petit cercle rouge. Si tu as une couleur à la mauvaise place, il te l'indiquera avec le petit cercle vert. L'ordre des cases choisies par l'ordinateur pour donner ces renseignements est aléatoire.</p>
+            <h3>Les Règles:</h3>
+            <p class="regles">Trouve la bonne combinaison...<br>Le code est composé de 4 couleurs différentes placées dans un ordre précis.<br>Après avoir testé une combinaison, l'ordinateur t'indiquera si tu as découvert des couleurs à la bonne place à l'aide de +. Il fera de même pour les couleurs situées à la mauvaise place à l'aide de -. L'ordre des cases choisies par l'ordinateur pour donner ces renseignements est aléatoire.</p>
         </div>
         <div id="ecranJeu">
             <div id="tableCases">
