--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Réalisation d'un mastermind pour l'apprentissage des manipulations du DOM en javascript lors de la formation Becode.">
     <title>MasterMind</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
